[package]
name = "async_ftp_gbk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1.3.9"
chrono = "0.4.11"

tokio = { version = "1.0.1", features = ["full"] }
tokio-rustls = { version = "0.23.0", optional = true }
pin-project = "1.0.0"

encoding_rs = "0.8.29"

[dev-dependencies]
#tokio = { version = "1.0.1", features = ["macros", "rt"] }
tokio-util = { version = "0.6.0", features = ["io"] }
tokio-stream = "0.1.0"
